# TALLER-1

./: Alumno.cpp  Alumno.h  CMakeLists.txt  Curso.cpp  Curso.h  Inscripcion.cpp  Inscripcion.h  ListAlumnos.cpp  ListAlumnos.h  ListCursos.cpp  ListCursos.h  ListInscripciones.cpp  ListInscripciones.h  ListNotas.cpp  ListNotas.h  Main.cpp  NodoAlumno.cpp  NodoAlumno.h  NodoCurso.cpp  NodoCurso.h  NodoInscripcion.cpp  NodoInscripcion.h  NodoNota.cpp  NodoNota.h  Nota.cpp  Nota.h  README.md
