cmake_minimum_required(VERSION 4.0)
project(TALLER_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(TALLER_1
        Main.cpp
        Alumno.cpp
        Alumno.h
        Curso.cpp
        Curso.h
        NodoAlumno.cpp
        NodoAlumno.h
        ListAlumnos.cpp
        ListAlumnos.h
        NodoCurso.cpp
        NodoCurso.h
        ListCursos.cpp
        ListCursos.h
        Nota.cpp
        Nota.h
        NodoNota.cpp
        NodoNota.h
        ListNotas.cpp
        ListNotas.h
)
